infra/k8s/base/envoy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guardyn-envoy
  namespace: apps
  labels:
    app: guardyn-envoy
    guardyn.io/stage: poc
spec:
  type: ClusterIP
  selector:
    app: guardyn-envoy
  ports:
  - name: grpc-web
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: admin
    port: 9901
    targetPort: 9901
    protocol: TCP
